<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rbs_card_incorrect_cvc">CVC2/CVV2 is incorrect</string>
    <string name="rbs_card_incorrect_length">Card number length should be 16–19 digit</string>
    <string name="rbs_card_incorrect_number">The card number is incorrect</string>
    <string name="rbs_card_incorrect_expiry">Card expiry date is incorrect</string>
    <string name="rbs_card_incorrect_card_holder">The card holder is incorrect</string>
    <string name="rbs_order_incorrect_length">Order number should not be empty</string>
    <string name="rbs_binding_incorrect_length">Incorrect bindingId length</string>
    <string name="rbs_pub_key_required">Public key required</string>
    <string name="rbs_binding_required">Binding id required</string>
    <string name="rbs_binding_incorrect">Binding id has incorrect format</string>
</resources>